# skyengine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.py
application/backend/: server.py
application/frontend/: package-lock.json  package.json  vite.config.js
backend/: backend_core.py  backend_server.py  main.py
backend/controller/: __init__.py  api_handler.py
backend/environment/: __init__.py  grid_core.py
backend/server/: __init__.py  control_server.py  grid_server.py  packet_server.py
backend/service/: agent_service.py  file_service.py  monitor_service.py
config/: __init__.py  all_field_const.py  application_config.yaml  event_generator_config.yaml  example_factory.json  factory_graph_application_config.yaml  grid_config.yaml  grid_factory.json  pipeline_config_set_config.yaml  template_config_0927_config.yaml  template_config_set_config.yaml
config/config_set/: __init__.py  event_config.yaml  (+2 more)
dataset/: __init__.py
dockerfiles/: backend.dockerfile  frontend.dockerfile
docs/: QUICKSTART.md  event_design.md  grid_factory_usage.md  lifecycle_design.md  readme
frontend/: .env.example  .gitignore  index.html  package.json  vite.config.ts
scripts/: auto_train_loop.py  plot_benchmark.py  run_benchmark.py
sky_dag_rl/: test_greedy.py
sky_logs/: logger.py
sky_simulator/: __init__.py
test/: test_bootstrap.py  test_context.py  test_env_v0.py  test_greedy.py  test_lifecycle.py  test_load.py  test_load_config.py  test_loader.py  test_main.py  test_registry.py  try_vis.py
tiangong_logs/: dc_helper.py  logger.py
(+943 files in other folders)
